0.2.32

* TaskBox run - now transparently passes all plugin related options

* Add `help`, `info` aliases for `plg man` command

0.2.31 2017-03-29

* Requires latest version of Outthentic

0.2.30 2017-03-18

* bring in versions at Changes file

0.2.29 2017-03-18

* init_sparrow_env - do not remove sparrow cache ( need to fix https://github.com/melezhik/sparrowdo/issues/4 )

0.2.28 2017-03-02

* Requires latest version of Outthentic

0.2.27 2017-03-02

* Requires latest version of Outthentic

0.2.26 2017-02-17  

* Reports - changed markers for plugins and tasks 
* Requires latest version of Outthentic - to add timestamps to sparrow reports (#9)

0.2.25 2017-01-11

* support for task get created before version: 0.2.23 - evaluate task description as task name in case of missing task description in task meta data.
 
0.2.24 2017-01-11

* improved readability of reports - print story footprints as plugins names when running plugins

0.2.23 2017-01-09

* tasks - now save task description in meta data ( so that to print it out in task report )
* task boxes - add task descriptions to tasks

0.2.22 2017-01-09

* Sets git credential timeout for private plugin install 
* Improves task reports
* Passes --task parameter to strun ( to print out task names )

0.2.21  2016-12-19

* requires latest version of Outthentic

0.2.20 2016-12-15

* depends on latest version of Outthentic ( to allow --purge-cache )
* mention a --purge-cache at Sparrow doc

0.2.19 2016-11-23

* sparrow task run --nocolor hotfix

0.2.18 2016-11-21

* sparrow task run --dump-config hotfix

0.2.17 2016-11-21

* add --nocolor option to actions which might produce color output
* remote task `public-list` changed to `public list`
* documentation - describe `--dump-config` option for tasks
 
0.2.16 2016-11-18

* fix broken POD


0.2.15 2016-11-18

* a formal release to rely on latest version of Outthentic
* introducing SPARROW_NO_COLOR var


0.2.14 2016-10-29

* task list added
* alternative task name notation
