@@ -4,7 +4,7 @@
       "L<Aleksei Melezhik|mailto:melezhik@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "ExtUtils::MakeMaker version 7.1002, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "ExtUtils::MakeMaker version 7.24, CPAN::Meta::Converter version 2.150010",
    "license" : [
       "perl_5"
    ],
@@ -36,6 +36,7 @@
             "JSON" : "0",
             "Outthentic" : "v0.2.30",
             "Term::ANSIColor" : "4.02",
+            "YAML" : "0",
             "swat" : "v0.1.96",
             "version" : "0"
          }
@@ -43,5 +44,5 @@
    },
    "release_status" : "stable",
    "version" : "v0.2.32",
-   "x_serialization_backend" : "JSON::PP version 2.27300_01"
+   "x_serialization_backend" : "JSON::PP version 2.27400_01"
 }
