@@ -4,8 +4,8 @@ generator: <<CODE
 use test;
 
 [ 
-    "assert: ".(-f sparrow_root."/projects/foo100/tasks/bar/suite.ini"). 
-     " ".sparrow_root."/projects/foo100/tasks/bar/suite.ini exists" 
+    "assert: ".(-f sparrow_root."/projects/foo100/tasks/bar/suite.cfg"). 
+     " ".sparrow_root."/projects/foo100/tasks/bar/suite.cfg exists" 
 ]
 
 CODE
